      change all properties for a breakpoint at once.
    - Breakpoint commands.  You can record and edit commands to be
      executed when a breakpoint is reached.
    - On popular demand, the command tool now has `until' and `make' buttons.
    - Conditional breakpoints and breakpoints with ignore counts are now
      indicated by special breakpoint symbols.
    - Improved help system: In accordance with the Motif style guide,
      F1 invokes help on the item pointed at, while Shift+F1 lets you
      choose an item.
    - Tips of the day.  Upon startup, DDD shows a useful hint for DDD usage.
    - Value tips and selections now work for struct members, too: you
      can point at `A.B' or `A->B' and get the current value.
    - The maximum number of glyphs is now configurable at startup time.
      See the `maxGlyphs' resource for details.
    - DDD no longer indents the source code, leaving more horizontal
      space.  To change this, see `Edit | Preferences | Source |
      Source indentation'.
    - DBX settings now also work with SGI DBX.

    Bug fixes:
    - Data displays are no longer cluttered by Sun DBX 3.0 warnings.
    - Paned window management has been improved a lot.
    - DDD now works around a Motif 2.1/XFree86 bug that caused glyphs
      to disappear.  See the `cacheGlyphImages' resource for details.
    - The `endless scrolling' problem may now be prevented by delaying
      glyph updates.  See the `glyphUpdateDelay' resource for details.
    - DDD no longer terminates the inferior debugger when receiving an 
      EOF on input.   See the `terminateOnEOF' resource for details.
    - One-letter options like `-b BPS' or `-x FILE' work again.

    Changes in configuration and building:
    - LessTif 0.83 is supported (and a standard test environment of
      the DDD developers).  See `patches/' for some useful patches.

    Compatibility notes:
    - Some resources were renamed for clarity: